# brainjar

./: .gitignore  LICENSE  README.md  pyproject.toml
brain_pipe/hcp_ya_open/: README.md  fetch.py  labels.py  load.py  manifest.yaml
brain_pipe/hcp_ya_open/pipeline/: reg.py
brain_pipe/hcp_ya_restricted/: README.md  __init__.py  __main__.py  fetch.py  load.py  manifest.yaml
brain_pipe/oasis3/: README.md  __init__.py  __main__.py  fetch.py  labels.py  load.py  manifest.yaml
brain_pipe/oasis3/pipeline/: cohort.py  covariates.py  dti.py  fetch_imaging.py  fetch_scripts.py  fourdfp.py  install_scripts.py  manifest.py  reg.py  xnat.py
brainjar/: __init__.py
brainjar/_dwi_pipeline/: dti.py  qc_registration.py  reg.py  zip_check.py
brainjar/hcp_ya_open/: README.md  __init__.py  __main__.py  fetch.py  load.py  manifest.yaml
brainjar/hcp_ya_open/pipeline/: covariates.py
brainjar/hcp_ya_restricted/: README.md  __init__.py  __main__.py  fetch.py  labels.py  load.py
brainjar/oasis3/: README.md  __init__.py  __main__.py  fetch.py  labels.py  load.py
brainjar/oasis3/pipeline/: __init__.py  bundle.py  cohort.py  dti.py  xnat.py
tests/: conftest.py
tests/_dwi_pipeline/: test_dti.py  test_reg.py  test_zip_check.py
tests/hcp_ya_open/: qc_registration.py  test_fetch.py  test_load.py  test_repro.py
tests/hcp_ya_restricted/: test_fetch.py  test_load.py
tests/oasis3/: install_nifti_4dfp.sh  qc_registration.py  test_fourdfp.py  test_repro.py  test_xnat_bundle.py
tests/oasis3/fixtures/: generate_4dfp_fixtures.py
tests/oasis3/fixtures/expected/: ori2_nnn.nii  ori2_nnp.nii  ori2_npn.nii  ori2_npp.nii  ori2_pnn.nii  ori2_pnp.nii  ori2_ppn.nii  ori2_ppp.nii  ori2_ppp_4d.nii  ori2_ppp_origin.nii  ori3_nnn.nii  ori3_nnp.nii  ori3_npn.nii  ori3_npp.nii  ori3_pnn.nii  ori3_pnp.nii  ori3_ppn.nii  ori3_ppp.nii  ori4_nnn.nii  ori4_nnp.nii  ori4_npn.nii  ori4_npp.nii  ori4_pnn.nii  ori4_pnp.nii  ori4_ppn.nii  ori4_ppp.nii
tests/oasis3/fixtures/inputs/: ori2_nnn.4dfp.ifh  ori2_nnp.4dfp.ifh  ori2_npn.4dfp.ifh  ori2_npp.4dfp.ifh  ori2_pnn.4dfp.ifh  ori2_pnp.4dfp.ifh  ori2_ppn.4dfp.ifh  ori2_ppp.4dfp.ifh  ori2_ppp_4d.4dfp.ifh  ori2_ppp_4d.4dfp.img  ori2_ppp_origin.4dfp.ifh  ori3_nnn.4dfp.ifh  ori3_nnp.4dfp.ifh  ori3_npn.4dfp.ifh  ori3_npp.4dfp.ifh  ori3_pnn.4dfp.ifh  ori3_pnp.4dfp.ifh  ori3_pnp.4dfp.img  ori3_ppn.4dfp.ifh  ori3_ppp.4dfp.ifh  ori4_nnn.4dfp.ifh  ori4_nnp.4dfp.ifh  ori4_npn.4dfp.ifh  ori4_npp.4dfp.ifh  ori4_pnn.4dfp.ifh  ori4_pnp.4dfp.ifh  ori4_ppn.4dfp.ifh  ori4_ppp.4dfp.ifh
tests/reference/: oasis3_v1_md5.txt
