[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "brain_pipe"
version = "0.1.0"
description = "Reproducible processing pipelines and uniform loaders for brain imaging datasets."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "matt higger", email = "mhigger@ccs.neu.edu"},
]
dependencies = [
    "pandas>=2",
    "nibabel>=5",
    "platformdirs>=4",
    "pyyaml>=6",
    "tqdm>=4",
]

[project.optional-dependencies]
# Pipeline extras pin every dep to an exact version so that reprocessing
# reproduces the deposited derivative bit-for-bit. Install one at a time
# into a dedicated venv.

oasis3-pipeline = [
    # TODO: replace placeholder pins with `pip freeze` output from the
    # next clean run that produces the OASIS-3 derivative.
    "dipy==1.9.0",
    "antspyx==0.5.4",
    "nibabel==5.3.2",
    "numpy==1.26.4",
    "joblib==1.4.2",
    "tqdm==4.66.5",
    "pyyaml==6.0.2",
    "templateflow>=24.0.0",  # MNI152 fetch + cache
]

hcp_ya_open-pipeline = [
    # Pinned to the exact versions used by the bit-deterministic
    # reference run on 2026-05-18 (Python 3.12.3, seed=1). For full
    # transitive-dep reproducibility, install from
    # brain_pipe/hcp_ya_open/pipeline/requirements.lock instead.
    "dipy==1.9.0",
    "antspyx==0.5.4",
    "nibabel==5.3.2",
    "numpy==1.26.4",
    "joblib==1.4.2",
    "tqdm==4.66.5",
]

dev = [
    "pytest>=7",
]

[tool.setuptools.packages.find]
include = ["brain_pipe*"]

[tool.setuptools.package-data]
"brain_pipe.hcp_ya_open" = ["manifest.yaml", "pipeline/requirements.lock"]
"brain_pipe.hcp_ya_restricted" = ["manifest.yaml"]
"brain_pipe.oasis3" = [
    "README.md",
    "manifest.yaml",
    "pipeline/requirements.lock",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
