[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "brainjar"
version = "0.1.1"
description = "Reproducible processing pipelines and uniform loaders for brain imaging datasets."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "matt higger", email = "mhigger@ccs.neu.edu"},
]
dependencies = [
    "pandas>=2",
    "nibabel>=5",
    "platformdirs>=4",
    "pyyaml>=6",
    "tqdm>=4",
    "matplotlib>=3",  # used by the registration-QC script
]

[project.optional-dependencies]
# Pipeline extras pin every dep to an exact version so that reprocessing
# reproduces the deposited derivative bit-for-bit. Install one at a time
# into a dedicated venv.

oasis3-pipeline = [
    # Pinned to the resolved versions from the 67-subject reference
    # run on 2026-05-20 (Python 3.12.3, n_jobs=8). Full transitive
    # lock at brainjar/oasis3/pipeline/requirements.lock.
    "dipy==1.9.0",
    "antspyx==0.5.4",
    "nibabel==5.4.2",
    "numpy==1.26.4",
    "joblib==1.5.3",
    "tqdm==4.67.3",
    "pyyaml==6.0.3",
    "templateflow==25.1.2",  # MNI152 fetch + cache
    "requests==2.34.2",      # NITRC-IR XNAT REST client
    "pandas==3.0.3",         # cohort + covariates CSV processing
]

hcp_ya_open-pipeline = [
    # Pinned to the exact versions used by the bit-deterministic
    # reference run on 2026-05-18 (Python 3.12.3, seed=1). For full
    # transitive-dep reproducibility, install from
    # brainjar/hcp_ya_open/pipeline/requirements.lock instead.
    "dipy==1.9.0",
    "antspyx==0.5.4",
    "nibabel==5.3.2",
    "numpy==1.26.4",
    "joblib==1.4.2",
    "tqdm==4.66.5",
]

dev = [
    "pytest>=7",
]

[tool.setuptools.packages.find]
include = ["brainjar*"]

[tool.setuptools.package-data]
"brainjar.hcp_ya_open" = ["manifest.yaml", "pipeline/requirements.lock"]
"brainjar.hcp_ya_restricted" = ["manifest.yaml"]
"brainjar.oasis3" = [
    "README.md",
    "manifest.yaml",
    "pipeline/requirements.lock",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
# importlib mode lets multiple test files share the same basename across
# subdirs (e.g. tests/hcp_ya_open/test_load.py + tests/hcp_ya_restricted/test_load.py).
# pythonpath makes brainjar importable without an editable install.
addopts = "--import-mode=importlib"
pythonpath = ["."]
